# AI-code-generation

./: .gitignore  .replit  README.md  Taskfile.yml  api_server.py  pyproject.toml  replit.md  run_api.sh
.ArgoWorkflows/: README.md  evaluation-workflow.yaml  finetune-workflow.yaml  training-workflow.yaml
configs/: deepspeed_config.json  eval_config.yaml  finetune_config.yaml  training_config.yaml
docs/: ARCHITECTURE.md  SETUP_GUIDE.md
scripts/: download_benchmarks.py  download_models.py  prepare_data.py  setup_tree_sitter.py
sec/neurosymbolic_codegen/: __init__.py  demo.py  train.py
sec/neurosymbolic_codegen/api/: __init__.py  main.py  simple_main.py
sec/neurosymbolic_codegen/core/: __init__.py  ast_encoder.py  reward_model.py  self_repair.py  smt_connector.py
sec/neurosymbolic_codegen/orchestration/: __init__.py  orchestrator.py
sec/neurosymbolic_codegen/rag/: __init__.py  rag_subsystem.py
sec/neurosymbolic_codegen/security/: __init__.py  analyzer.py
tests/benchmarks/: __init__.py
tests/unit/: test_ast_encoder.py  test_reward_model.py
